Make navbar collapsible on smaller devices and fix z-index of dropdown

--- a/tripleS/style.css
+++ b/tripleS/style.css
@@ -11,19 +11,15 @@ body {
     padding: 0;
 }
 
-.header {
-    width: 100%;
-    position: sticky;
-    font-size: 1.2em;
-}
-
-nav {
+.header, .navbar{
     display: flex;
     justify-content: space-between;
-    align-items: center;
     max-width: 1200px;
+    align-items: center;
     margin: 0 auto;
     padding: 20px;
+    width: 100%;
+    font-size: 1.2em;
 }
 
 .logo {
@@ -40,11 +36,19 @@ a {
     text-decoration: none;
 }
 
-nav > ul {
+.nav-list {
     display: flex;
     align-items: center;
     gap: 20px;
     padding: 0;
+    margin: 0;
+}
+
+.nav-item {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-size: 1.2rem;
 }
 
 .dropdown {
@@ -68,6 +72,7 @@ nav > ul {
     min-width: 160px;
     border-radius: 8px;
     font-size: 0.8em;
+    z-index: 1055;
 }
 
 .dropdown-members {
@@ -109,8 +114,8 @@ nav > ul {
     background-color: rgb(78, 78, 78);
 }
 
-section {
-    border: 2px sold orange;
+.section-main {
+    height: 1000px;
 }
 
 .carousel {
@@ -148,9 +153,12 @@ h3 ~ p {
     opacity: 0.7;
 }
 
-@media only screen and (max-width: 600px) {
-  .c-item, .carousel-caption {
+@media only screen and (max-width: 900px) {
+  .c-item, .carousel-caption, .section-main {
     height: 500px;
-  }
-}
+    }
+}   
+
+
+
 
